# rux

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  README.org  default.nix  release.nix  shell.nix  userspace.mk  x86_64.json
abi/: Cargo.toml
abi/src/: caddr.rs  lib.rs
docs/: Dockerfile  Makefile  capabilities.rst  conf.py  docker-compose.yml  index.rst  resources.rst  scheduling.rst
kernel/: Cargo.toml  Makefile
kernel/src/: lib.rs  logging.rs  macros.rs  system_calls.rs  unwind.rs  utils.rs
kernel/src/arch/riscv32/: linker.ld  mod.rs  start.S  uart16550.rs
kernel/src/arch/x86_64/: addr.rs  debug.rs  io.rs  linker.ld  mod.rs  start.S
kernel/src/arch/x86_64/cap/: mod.rs  paging.rs  thread.rs
kernel/src/arch/x86_64/cap/paging/: mod.rs  page.rs  pml4.rs
kernel/src/arch/x86_64/init/: interrupt.rs  mod.rs  multiboot.rs  paging.rs  segmentation.rs
kernel/src/arch/x86_64/interrupt/: apic.rs  bit_field.rs  dtables.rs  idt.rs  mod.rs  pic.rs  switch.rs
kernel/src/arch/x86_64/paging/: macros.rs  mod.rs  table.rs  with.rs
kernel/src/arch/x86_64/segmentation/: mod.rs  tss.rs
kernel/src/cap/: channel.rs  cpool.rs  mapping.rs  mod.rs  task.rs  thread.rs  untyped.rs
kernel/src/cap/cpool/: mdb.rs  mod.rs
kernel/src/common/: mod.rs  traits.rs
kernel/src/elf/: loader.rs  mod.rs
kernel/src/util/: field_offset.rs  guard.rs  mod.rs  object.rs
kernel/src/util/managed_arc/: mod.rs  rwlock.rs  weak_pool.rs
lazy_static/: Cargo.toml
nix/: riscv-toolchain.nix  rust-nightly.nix
rinit/: Cargo.toml  Makefile
rinit/src/: lib.rs  unwind.rs  vga_buffer.rs
selfalloc/: Cargo.toml
selfalloc/src/: lib.rs
spin/src/: lib.rs  mutex.rs  rw_lock.rs
src/: common.rs  lib.rs  macros.rs  multiboot.rs  utils.rs  vga_buffer.rs
src/alloc/: boxed.rs  mod.rs
src/cap/: alloc.rs  frame.rs  mod.rs  page_table.rs  pool.rs  reserved.rs  untyped.rs  utils.rs  vga.rs
src/common/: mod.rs
src/interrupts/: bit_field.rs  idt.rs  mod.rs
src/memory/: mod.rs  (+1 more)
system/: Cargo.toml
tests/: run.sh
tests/userspace/: Cargo.toml  Makefile
tests/userspace/examples/: allocator.rs
tests/userspace/src/arch/x86_64/: linker.ld
(+39 files in other folders)
