[package]
name = "rux"
version = "0.0.1"
authors = ["Wei Tang <hi@that.world>"]

[lib]
crate-type = ["staticlib"]

[dependencies.x86]
version = "0.8.0"
default-features = false

[dependencies.lazy_static]
version = "0.2.1"
features = ["spin_no_std"]

[dependencies.bitflags]
version = "0.7"

[dependencies.spin]
version = "0.3"

[dependencies.rlibc]
version = "1.0"